<resources>
    <!-- High level app strings -->
    <string name="app_name">Rijksmuseum</string>
    <string name="museum_name">Rijksmuseum</string>
    <string name="museum_address">"Museumstraat 1, 1071 XX Amsterdam, Netherlands"</string>
    <string name="museum_lat">52.360024</string>
    <string name="museum_lng">4.885230</string>

    <!-- Menu-related strings -->
    <string name="paintings_link_title">Paintings</string>
    <string name="find_us_link_title">Find the Museum</string>
    <string name="info_button_title">Ticket Information</string>

    <!-- Home screen strings -->
    <string name="museum_logo_description">Museum Logo</string>
    <string name="museum_bio">The Rijksmuseum is the museum of the Netherlands. In 2013, an entirely renovated Rijksmuseum opened its doors to the public. They are greeted by a stunning building, amazing interior design, wonderful exhibitions, lively events, and many fine amenities for young and old.</string>
    <string name="discover_art_btn">Discover Art ></string>
    <string name="rijksmuseum_exterior_description">Photograph of Rijksmuseum exterior</string>
    <string name="commissioned_by_title">Android app commissioned by:</string>
    <string name="art_without_frontiers_bio">We are a not-for-profit organisation with branches in many European countries, including the UK. We aim to promote the artistic heritage and promote cultural exchanges</string>
    <string name="art_without_frontiers_logo_description">Art Without Frontiers Logo</string>

    <!-- Currency exchange strings -->
    <string name="currency_activity_title">Ticket Prices</string>
    <string name="default_currency">EUR</string>
    <string name="key_default_currency">defaultCurrency</string>
    <string name="currency_dialog_title">Please select a currency</string>
    <string name="currency_placeholder">No prices currently available</string>
    <string name="currency_final_string">Adult (18+): %1$s%2$s\nStudent: %1$s%3$s\nChildren (under 18): FREE</string>

    <!-- Painting master activity strings -->
    <string name="master_painting_sort_dialog_title">Please select a sorting order</string>
    <string name="master_painting_filter_dialog_title">Please select an painting filter</string>
    <string name="master_painting_add_dialog_title">Add a new painting</string>

    <!-- Painting detail activity strings -->
    <string name="detail_painting_year">Complete %1$s</string>
    <string name="detail_painting_room">Located in room %1$s</string>
    <string name="detail_painting_rank">User rank: %1$s</string>
    <string name="detail_painting_delete_dialog_title">Are you sure you want to delete this painting?</string>
    <string name="detail_painting_edit_dialog_title">Edit painting</string>
    <string name="detail_painting_delete_btn">Delete painting</string>
    <string name="title_activity_find_us">Map</string>

    <!-- Add/Edit Painting dialog strings -->
    <string name="painting_dialog_title_field_title">Painting title</string>
    <string name="painting_dialog_title_field_hint">Enter a title&#8230;</string>
    <string name="painting_dialog_artist_field_title">Painting artist</string>
    <string name="painting_dialog_artist_field_hint">Enter an artist&#8230;</string>
    <string name="painting_dialog_room_field_title">Painting room</string>
    <string name="painting_dialog_room_field_hint">Enter a room&#8230;</string>
    <string name="painting_dialog_description_field_title">Painting description</string>
    <string name="painting_dialog_description_field_hint">Enter a description&#8230;</string>
    <string name="painting_dialog_year_field_title">Painting year of completion</string>
    <string name="painting_dialog_year_field_hint">Enter a year (format "XXXX")&#8230;</string>
    <string name="painting_dialog_rank_field_title">Painting rank</string>
    <string name="painting_dialog_rank_field_hint">Enter a ranking between 0&#8211;5&#8230;</string>
</resources>
