<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/main_activity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cet325.bg72db.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorMedium"
            android:padding="@dimen/largePadding">

            <ImageView
                android:id="@+id/museum_logo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                android:paddingBottom="@dimen/mediumPadding"
                android:contentDescription="@string/museum_logo_description"
                android:src="@drawable/museum_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/museum_bio"
                android:textSize="18sp"
                android:lineSpacingExtra="8dp"
                android:textColor="@color/colorPrimaryDark" />

            <Button android:id="@+id/discover_art_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover_art_btn"
                android:layout_marginTop="@dimen/mediumPadding"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorLight"
            android:padding="@dimen/largePadding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/commissioned_by_title"
                android:textSize="12sp"
                android:lineSpacingExtra="8dp"
                android:textColor="@color/colorAccent"
                android:paddingBottom="@dimen/mediumPadding" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                android:paddingBottom="@dimen/mediumPadding"
                android:contentDescription="@string/museum_logo_description"
                android:src="@drawable/awf_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/art_without_frontiers_bio"
                android:textSize="18sp"
                android:lineSpacingExtra="8dp"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
